<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.nutrehogar</groupId>
    <artifactId>SistemaContable</artifactId>
    <version>1.7-SNAPSHOT</version>
    <packaging>jar</packaging>

    <name>Sistema Contable</name>
    <url>https://github.com/TrotmanCH/Contabilidad-Nutre-Hogar</url>
    <description>
        Este proyecto es una aplicación de escritorio para la gestión contable de Nutre Hogar.
        Permite el ledgerRecord y control de transacciones contables, incluyendo la generación de reportes de libro diario
        mayor y general.
    </description>
    <inceptionYear>2024</inceptionYear>

    <organization>
        <name>Nutre Hogar</name>
        <url>https://www.nutrehogar.net/</url>
    </organization>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
        <exec.mainClass>com.nutrehogar.sistemacontable.application.MainClass</exec.mainClass>
    </properties>

    <developers>
        <developer>
            <id>Calcifer1331</id>
            <name>Yoseph Arauz</name>
            <email>Calcifer1331@hotmail.com</email>
            <url>https://github.com/Calcifer1331</url>
            <roles>
                <role>Software Developer</role>
                <role>Full Stack Developer</role>
                <role>Tester</role>
                <role>Data Engineer</role>
            </roles>
            <organization>
                Universidad Tecnológica de Panamá
                Centro Regional de Bocas del Toro
            </organization>
            <organizationUrl>https://bt.utp.ac.pa/</organizationUrl>
            <properties>
                <organizationEmail>yoseph.arauz@utp.ac.pa</organizationEmail>
            </properties>
        </developer>
        <developer>
            <id>cadltop</id>
            <name>César De La Cruz</name>
            <email>caesarfromthecross.808@gmail.com</email>
            <url>https://github.com/cadltop</url>
            <roles>
                <role>Full Stack Developer</role>
            </roles>
            <organization>
                Universidad Tecnológica de Panamá
                Centro Regional de Bocas del Toro
            </organization>
            <organizationUrl>https://bt.utp.ac.pa/</organizationUrl>
            <properties>
                <organizationEmail>cesar.delacruz@utp.ac.pa</organizationEmail>
            </properties>
        </developer>
        <developer>
            <id>JaysonG05 </id>
            <name>Jayson Grant</name>
            <email>jaysonc-09@outlook.es</email>
            <url>https://github.com/JaysonG05</url>
            <roles>
                <role>Software Developer</role>
                <role>Full Stack Developer</role>
            </roles>
            <organization>
                Universidad Tecnológica de Panamá
                Centro Regional de Bocas del Toro
            </organization>
            <organizationUrl>https://bt.utp.ac.pa/</organizationUrl>
            <properties>
                <organizationEmail>yoseph.arauz@utp.ac.pa</organizationEmail>
            </properties>
        </developer>
        <developer>

        </developer>
    </developers>

    <contributors>
        <contributor>
            <name></name>
        </contributor>
    </contributors>

    <licenses>
        <license>
            <name>Apache License</name>
            <url>http://www.apache.org/licenses/</url>
            <distribution>manual</distribution>
        </license>
    </licenses>

    <dependencies>
        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-core</artifactId>
            <version>6.6.1.Final</version>
        </dependency>
        <dependency>
            <groupId>org.hibernate</groupId>
            <artifactId>hibernate-envers</artifactId>
            <version>6.6.1.Final</version>
            <type>pom</type>
        </dependency>
        <dependency>
            <groupId>org.hibernate.orm</groupId>
            <artifactId>hibernate-community-dialects</artifactId>
            <version>6.6.1.Final</version>
        </dependency>

        <dependency>
            <groupId>jakarta.persistence</groupId>
            <artifactId>jakarta.persistence-api</artifactId>
            <version>3.1.0</version>
        </dependency>

        <dependency>
            <groupId>org.xerial</groupId>
            <artifactId>sqlite-jdbc</artifactId>
            <version>3.46.1.3</version>
        </dependency>

<!--        <dependency>-->
<!--            <groupId>com.itextpdf</groupId>-->
<!--            <artifactId>itextpdf</artifactId>-->
<!--            <version>5.5.13.4</version>-->
<!--        </dependency>-->
        <dependency>
            <groupId>net.sf.jasperreports</groupId>
            <artifactId>jasperreports</artifactId>
            <version>7.0.1</version>
        </dependency>
        <dependency>
            <groupId>net.sf.jasperreports</groupId>
            <artifactId>jasperreports-pdf</artifactId>
            <version>7.0.1</version>
        </dependency>
        <dependency>
            <groupId>net.sf.jasperreports</groupId>
            <artifactId>jasperreports-fonts</artifactId>
            <version>7.0.0</version>
        </dependency>

        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <version>1.18.34</version>
            <scope>provided</scope>
        </dependency>

        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf</artifactId>
            <version>3.5.2</version>
        </dependency>

        <dependency>
            <groupId>com.formdev</groupId>
            <artifactId>flatlaf-extras</artifactId>
            <version>3.4.1</version>
        </dependency>
        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <version>5.8.2</version>
            <scope>test</scope>
        </dependency>

        <dependency>
            <groupId>org.jetbrains</groupId>
            <artifactId>annotations</artifactId>
            <version>26.0.1</version>
            <scope>compile</scope>
        </dependency>

        <!-- SLF4J API -->
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-api</artifactId>
            <version>2.0.13</version>
        </dependency>

        <!-- Logback Classic -->
        <dependency>
            <groupId>ch.qos.logback</groupId>
            <artifactId>logback-classic</artifactId>
            <version>1.5.6</version>
        </dependency>

    </dependencies>
    <build>
        <plugins>
            <!-- Maven Compiler Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.13.0</version>
                <configuration>
                    <source>${maven.compiler.source}</source>
                    <target>${maven.compiler.target}</target>
                    <annotationProcessorPaths>
                        <path>
                            <groupId>org.projectlombok</groupId>
                            <artifactId>lombok</artifactId>
                            <version>1.18.34</version>
                        </path>
                    </annotationProcessorPaths>
                </configuration>
            </plugin>

            <!-- Maven Shade Plugin -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.6.0</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <createDependencyReducedPom>false</createDependencyReducedPom>
                            <transformers>
                                <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                    <mainClass>${exec.mainClass}</mainClass>
                                </transformer>
                            </transformers>
                            <filters>
                                <filter>
                                    <artifact>*:*</artifact>
                                    <excludes>
                                        <exclude>META-INF/*.SF</exclude>
                                        <exclude>META-INF/*.DSA</exclude>
                                        <exclude>META-INF/*.RSA</exclude>
                                        <exclude>META-INF/LICENSE</exclude>
                                        <exclude>META-INF/NOTICE</exclude>
                                    </excludes>
                                </filter>
                            </filters>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
</project>
